# djangoc

./: .devcontainer.json  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  djangoc.code-workspace  docker-compose.yml  env.example  poetry.toml  pyproject.toml
caddy/: dev.caddyfile
docker/: Dockerfile  docker-compose.yml  entrypoint-back.sh  entrypoint-beat.sh  entrypoint-worker.sh  entrypoint.sh  server.dockerfile
server/: manage.py
server/config/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
server/config/jinja2/: env.py  filters.py
server/core/: admin.py  apps.py  handlers.py  models.py  views.py
server/core/management/: __init__.py
server/core/management/commands/: init_minio.py  rundebugserver.py
server/core/migrations/: 0001_initial.py  0002_person.py
server/core/templates/core/: base.html  hello_world.html
server/jinja_templates/core/: base.html  hello_world.html
server/users/: __init__.py  admin.py  apps.py  consts.py  models.py  signals.py  views.py
server/users/migrations/: 0001_initial.py  __init__.py
src/: manage.py
src/core/: admin.py  apps.py  handlers.py  models.py  tests.py  views.py
src/core/management/commands/: __init__.py
src/core/migrations/: 0001_initial.py
src/core/templates/core/: hello_world.html
src/djangoc/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
src/djangoc/jinja2/: __init__.py  extensions.py
tools/docker/: create_volumes.sh
tools/dozzle/: docker-compose.dozzle.yml
tools/git-hooks/: pre-commit
tools/git-hooks/hooks/: djlint-lint  eof-check  mypy  poetry-check  ruff-check  ruff-format
tools/pgadmin4/: docker-compose.pgadmin4.yml
tools/redisinsight/: docker-compose.redisinsight.yml
