[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Nikolay Bely <belyynikolay@gmail.com>"]
readme = "README.md"
# Poetry 1.8+
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
celery = { version = "5.3.6", extras = ["eventlet", "redis"] }
django = "5.0.4"
django-celery-beat = "2.6.0"
django-celery-results = "2.5.1"
django-jinja = "2.11.0"
django-minio-storage = "0.5.7"
django-redisboard = "8.4.0"
docutils = "0.21.1"
eventlet = "0.36.1"
gunicorn = { version = "21.2.0", extras = ["eventlet"] }
jinja2 = "3.1.3"
pillow = "10.3.0"
psycopg = { extras = ["binary"], version = "3.1.18" }
whitenoise = { extras = ["brotli"], version = "6.6.0" }
django-filter = "24.2"

[tool.poetry.group.dev.dependencies]
debugpy = "1.8.1"
django-debug-toolbar = "4.3.0"
djlint = "1.34.1"
pre-commit = "3.7.0"
pyinstrument = "4.6.2"
ruff = "0.3.7"

[tool.ruff.format]
# verbose = true

[tool.djlint]
ignore = "H006,H030,H031"
include = "H017,H035"
extend_exclude = "profiles/"
indent = 2
blank_line_after_tag = "load,extends"
profile = "jinja"
max_line_length = 80
format_attribute_template_tags = true
use_gitignore = true

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md#type-check-diagnostics-settings
reportGeneralTypeIssues = false

[tool.ruff]
src = ["server"]
target-version = "py311"
respect-gitignore = true

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "C",
    "I",
    "D",
    "UP",
    "YTT",
    #"ANN",
    "B",
    "COM",
    "C4",
    "PT",
    "RET",
    "SIM",
    "ARG",
    "PTH",
    "PL",
    "TRY",
    "RUF",
]
ignore = ["COM812"] # TODO: ruff-format warning

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = true
mark-parentheses = true

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"**/migrations/*" = ["ANN", "D100", "D101", "RUF012"]

[tool.ruff.lint.pydocstyle]
convention = "google"
