[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Nikolay Bely <belyynikolay@gmail.com>"]
readme = "README.md"
# Poetry 1.8+
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
celery = { version = "5.4.0", extras = ["eventlet", "redis"] }
celery-types = "0.22.0"
django = "5.0.7"
django-celery-beat = "2.6.0"
django-celery-results = "2.5.1"
django-filter = "24.2"
django-minio-storage = "0.5.7"
django-redisboard = "8.4.0"
django-stubs-ext = "5.0.4"
docutils = "0.21.2"
eventlet = "0.36.1"
gunicorn = { version = "22.0.0", extras = ["eventlet"] }
jinja2 = "3.1.4"
orjson = "3.10.6"
pillow = "10.4.0"
psycopg = { extras = ["binary"], version = "3.2.1" }
redis = {version = "5.0.8", extras = ["hiredis"]}

[tool.poetry.group.dev.dependencies]
debugpy = "1.8.2"
django-debug-toolbar = "4.4.6"
django-stubs = { version = "5.0.4", extras = ["compatible-mypy"] }
djlint = "1.34.1"
mypy = "1.11.1"
pyinstrument = "4.6.2"
ruff = "0.5.5"

[tool.ruff.format]
# verbose = true

[tool.djlint]
ignore = "H006,H030,H031"
include = "H017,H035"
extend_exclude = "profiles/"
indent = 2
blank_line_after_tag = "load,extends"
profile = "jinja"
max_line_length = 80
format_attribute_template_tags = true
use_gitignore = true

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md#type-check-diagnostics-settings
reportGeneralTypeIssues = false

[tool.ruff]
src = ["server"]
target-version = "py311"
respect-gitignore = true

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "C",
    "I",
    "D",
    "UP",
    "YTT",
    "B",
    "COM",
    "C4",
    "PT",
    "RET",
    "SIM",
    "ARG",
    "PTH",
    "PL",
    "TRY",
    "RUF",
]
ignore = ["COM812"] # TODO: ruff-format warning

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = true
mark-parentheses = true

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"**/migrations/*" = ["ANN", "D100", "D101", "RUF012", "E501"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
mypy_path = "./server"
enable_error_code = [
    "truthy-bool",
    "truthy-iterable",
    "redundant-expr",
    "unused-awaitable",
    "ignore-without-code",
    "possibly-undefined",
    "redundant-self",
]
plugins = ["mypy_django_plugin.main"]
explicit_package_bases = true
ignore_missing_imports = true
strict = true
warn_unreachable = true

[tool.django-stubs]
django_settings_module = "config.settings"
